2019-07-20  Egor Kobylkin  <egor@kobylkin.com>

	[BZ #2872]
	* locale/C-translit.h.in: Add Cyrillic transliteration.

2019-07-19  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Add system calls
	from Linux 5.2.
	(fsconfig): Add system call name.
	(fsmount): Likewise.
	(fsopen): Likewise.
	(fspick): Likewise.
	(move_mount): Likewise.
	(open_tree): Likewise.

2019-07-18  Carlos O'Donell  <carlos@redhat.com>

	* po/libc.pot: Regenerate.

2019-07-18  Mike Crowe  <mac@mcrowe.com>

	* sysdeps/unix/sysv/linux/hppa/pthread.h: Add declarations of
	functions recently added to sysdeps/nptl/pthread.h:
	pthread_mutex_clocklock, pthread_rwlock_clockrdlock,
	pthread_rwlock_clockwrlock and pthread_cond_clockwait.

	* nptl/forward.c: Remove unnecessary __pthread_cond_clockwait and
	pthread_cond_clockwait forwarding functions.  There are no internal
	users, so it is unnecessary to expose these functions in libc.so.
	* sysdeps/nptl/pthread-functions.h (pthread_functions): Remove
	unnecessary ptr___pthread_cond_clockwait member.
	* nptl/nptl-init.c (pthread_functions): Remove assignment of
	removed member.

2019-07-17  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #21897]
	* localedata/locales/aa_DJ (abday): Update from CLDR, all words
	begin with an uppercase letter now.
	(abmon): Likewise.
	(mon): Update from CLDR, reword February from "Kudo" to
	"Naharsi Kudo", April from "Agda Baxisso" to "Agda Baxis",
	and August from "Liiqen" to "Leqeeni".
	* localedata/locales/aa_ER (mon): Update from CLDR, reword
	April from "Agda Baxisso" to "Agda Baxis" and August from
	"Leqeeni" to "Liiqen".
	* localedata/locales/aa_ER@saaho (mon): Likewise.
	* localedata/locales/aa_ET (abmon): Update from CLDR, reword
	abbreviated February from "Kud" to "Nah".
	(mon): Update from CLDR, reword February from "Kudo" to
	"Naharsi Kudo" and April from "Agda Baxisso" to "Agda Baxis".

2019-07-17  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #23996]