@@ -1,3 +1,8 @@
+2019-07-20  Florian Weimer  <fweimer@redhat.com>
+
+	* scripts/glibcextract.py (compute_c_consts): Print source code on
+	compiler failure.
+
 2019-07-20  Egor Kobylkin  <egor@kobylkin.com>
 
 	[BZ #2872]
